src/objects/Channel_Business_Review_Market_Trend__c.object
<CustomObject>
    <description>R5-Custom object to define Channel Business Review Market Trend</description>
    <fields>
        <fullName>Channel_Business_Review__c</fullName>
        <description>R5 Master relation ship Channel Business Review</description>
        <label>Channel Business Review</label>
        <referenceTo>Channel_Business_Review__c</referenceTo>
        <relationshipName>Channel_Business_Review_Market_Trends</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <description>R5-Picklist contains Feedback values</description>
        <label>Feedback</label>
        <picklist>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stable/ OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Focussed_Industry__c</fullName>
        <description>R5 - Picklist contains Focussed Industry Values</description>
        <label>Focused Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Building - Residential Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building - Commercial &amp; institutional Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building - Industrial Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Automotive - Automotive (Vehicles - OEM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Automotive - Automotives (Parts - Tier1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Petrochemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Food and Beverage - Ingredients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Food and Beverage - Sugar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Food and Beverage - Bakery &amp; Confectionery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Food and Beverage - Fruit &amp; Vegetables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Food and Beverage - Dairy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Food and Beverage - Meat, Poultry, Seafood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Food and Beverage - Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Food and Beverage - Other Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Textile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Metals - Aluminium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Metals - Steel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Metals - Other Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Electronics and Semiconductors (3C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Mining and Minerals - Underground Mining including Hoisting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Mining and Minerals - Open Pit Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Mining and Minerals - Grinding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Mining and Minerals - Mineral Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Cement and Glass - Cement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Cement and Glass - Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Oil and Gas Industry -Oil and Gas - Offshore Upstream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Oil and Gas Industry -Oil and Gas - Onshore Upstream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry - Oil and Gas Industry - Refining</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>R5 - Notes</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Country__c</fullName>
        <description>R5 - Copies Primary Address Country from Account .</description>
        <formula>TEXT( Channel_Business_Review__r.Account__r.Primary_Address_Country__c )</formula>
        <label>Primary Address Country</label>
        <type>Text</type>
    </fields>
    <label>Market trend detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Channel_Business_Review__c</columns>
        <columns>Focussed_Industry__c</columns>
        <columns>Feedback__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MARKET TREND - {0000}</displayFormat>
        <label>Market Trend Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market trend details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Channel_Business_Review_Closed_Check</fullName>
        <active>true</active>
        <description>R5 - If Channel Business review Status is Obsolete/Completed, then the user should not edit the Channel Business review Market Trend</description>
        <errorConditionFormula>OR(ISPICKVAL( Channel_Business_Review__r.Status__c , &apos;Obsolete&apos;),
ISPICKVAL( Channel_Business_Review__r.Status__c , &apos;Completed&apos;))</errorConditionFormula>
        <errorMessage>You cannot save the changes - Channel Partner Business Review is Closed</errorMessage>
    </validationRules>
</CustomObject>